--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
   <div class="container">
     <div class="clock">
       <h1 class="clock__output">
-        <span class="clock__hours">00</span>:<span class="clock__mins">00</span>:<span class="clock__secs">00</span>
+        <span id="js-hours" class="clock__hours">00</span>:<span id="js-mins" class="clock__mins">00</span>:<span id="js-secs" class="clock__secs">00</span>
       </h1>
     </div>
   </div>
-  <script src="clock.js"></script>
+  <script src="js/clock.js"></script>
 </body>
 </html>
