Set the username in local storage

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>To-do App</title>
   <link rel="stylesheet" href="css/style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;600&display=swap" rel="stylesheet">
 </head>
 <body>
   <div class="container">
@@ -16,7 +17,7 @@
     </div>
     <div class="greetings">
       <h2 id="js-greetingsText" class="greetings__text"></h2>
-      <form id="js-greetingsForm">
+      <form id="js-greetingsForm" class="greetings__form showing">
         <input id="js-greetingsInput" class="greetings__input" type="text" placeholder="What's your name?🤓">
       </form>
     </div>
