Change greetings and clock flag

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="greetings">
       <h2 id="js-greetingsIntroText" class="greetings__intro-text">Hello, what's your name?🤓</h2>
       <h3 id="js-greetingsOutputText" class="greetings__output-text"></h3>
-      <form id="js-greetingsForm" class="greetings__form showing">
+      <form id="js-greetingsForm" class="greetings__form">
         <input id="js-greetingsInput" class="greetings__input" type="text" placeholder="Your name?">
       </form>
     </div>
