Generate background.js

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;600&display=swap" rel="stylesheet">
 </head>
 <body>
-  <div class="container">
+  <div id="js-background" class="container">
     <div id="js-clock" class="clock">
       <h1 class="clock__output">
         <span id="js-hours" class="clock__hours">00</span>:<span id="js-mins" class="clock__mins">00</span>:<span id="js-secs" class="clock__secs">00</span>
@@ -26,5 +26,6 @@
   </div>
   <script src="js/clock.js"></script>
   <script src="js/greetings.js"></script>
+  <script src="js/background.js"></script>
 </body>
 </html>
