--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 <body>
   <div id="js-background" class="container">
+    <div id="js-weather" class="weather"></div>
     <div id="js-clock" class="clock">
       <h1 class="clock__output">
         <span id="js-hours" class="clock__hours">00</span>:<span id="js-mins" class="clock__mins">00</span>:<span id="js-secs" class="clock__secs">00</span>
@@ -27,5 +28,6 @@
   <script src="js/clock.js"></script>
   <script src="js/greetings.js"></script>
   <script src="js/background.js"></script>
+  <script src="js/weather.js"></script>
 </body>
 </html>
