Weather.js done!

--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
 </head>
 <body>
   <div id="js-background" class="container">
-    <div id="js-weather" class="weather"></div>
+    <div id="js-weather" class="weather">
+      <span id="js-temp" class="weather__temp"></span>
+      <span id="js-area" class="weather__area"></span>
+      <span id="js-sky" class="weather__sky"></span>
+    </div>
     <div id="js-clock" class="clock">
       <h1 class="clock__output">
         <span id="js-hours" class="clock__hours">00</span>:<span id="js-mins" class="clock__mins">00</span>:<span id="js-secs" class="clock__secs">00</span>
