--- a/index.html
+++ b/index.html
@@ -25,13 +25,21 @@
       <h2 id="js-greetingsIntroText" class="greetings__intro-text">Hello, what's your name?🤓</h2>
       <h3 id="js-greetingsOutputText" class="greetings__output-text"></h3>
       <form id="js-greetingsForm" class="greetings__form">
-        <input id="js-greetingsInput" class="greetings__input" type="text" placeholder="Your name?">
+        <input id="js-greetingsInput" class="greetings__input" type="text" placeholder="Your name?" />
       </form>
+    </div>
+    <div id="js-todo" class="todo">
+      <form id="js-todoForm" class="todo__form">
+        <input id="js-todoInput" class="todo__input" type="text" placeholder="✍️Add item..." />
+      </form>
+      <ul id="js-todoList" class="todo__list">
+      </ul>
     </div>
   </div>
   <script src="js/clock.js"></script>
   <script src="js/greetings.js"></script>
   <script src="js/background.js"></script>
   <script src="js/weather.js"></script>
+  <script src="js/todo.js"></script>
 </body>
 </html>
