Create todo elements

--- a/index.html
+++ b/index.html
@@ -30,12 +30,13 @@
     </div>
     <div id="js-todo" class="todo">
       <form id="js-todoForm" class="todo__form">
-        <input id="js-todoInput" class="todo__input" type="text" placeholder="✍️Add item..." />
+        <input id="js-todoInput" class="todo__input" type="text" placeholder="✍️ Add item..." />
       </form>
       <ul id="js-todoList" class="todo__list">
       </ul>
     </div>
   </div>
+  <script src="https://kit.fontawesome.com/e289f6332b.js" crossorigin="anonymous"></script>
   <script src="js/clock.js"></script>
   <script src="js/greetings.js"></script>
   <script src="js/background.js"></script>
