--- a/index.html
+++ b/index.html
@@ -35,6 +35,11 @@
       <ul id="js-todoList" class="todo__list">
       </ul>
     </div>
+    <footer>
+      <a class="github-logo" href="https://github.com/iamhayoung/to-do-app-js" target="_blank">
+        <i class="fab fa-github" aria-hidden="true"></i>
+      </a>
+    </footer>
   </div>
   <script src="https://kit.fontawesome.com/e289f6332b.js" crossorigin="anonymous"></script>
   <script src="js/clock.js"></script>
