--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
       <a class="github-logo" href="https://github.com/iamhayoung/to-do-app-js" target="_blank">
         <i class="fab fa-github" aria-hidden="true"></i>
       </a>
+      <button id="js-resetBtn" class="reset-btn" data-tooltip="Reset Your Name and To-dos.">
+        <i class="far fa-trash-alt"></i>
+      </button>
     </footer>
   </div>
   <script src="https://kit.fontawesome.com/e289f6332b.js" crossorigin="anonymous"></script>
